# numaproj-demo

./: .gitignore  Dockerfile  Makefile  README.md  app.js  build.sh  config.yaml  createImageCache.js  env.js  go.mod  go.sum  index.html  log_message.go  main.css  main.go  main.js  prometheus.go  release.sh
demo-app/: go.sum  prometheus.go
demo-app/manifests/: kustomization.yaml
demo-app/manifests/rollout/: unified-anomaly.yaml
demo-app/ui/: app.js
dooreats/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
dooreats/generator/: Dockerfile  main.go  restaurants.json
dooreats/manifests/: kafka.yaml  order-gen.yaml  pipeline.yaml
e-mart/: Makefile  README.md  go.mod  go.sum  main.go
e-mart/generator/: main.go
e-mart/manifests/: pipeline.yaml
emart/: Dockerfile  README.md  go.sum
emart/generator/: Dockerfile  products.json
emart/manifests/: emart-order-gen.yaml
ingestor/: README.md  log-ingestor-config-patch.yaml
manifests/: README.md  install.yaml  kustomization.yaml
manifests/argo-rollouts/: kustomization.yaml
manifests/argocon/: error-rate-anomaly.yaml  error-rate.yaml  install.yaml  latency-anomaly.yaml  unified-anomaly.yaml
manifests/assist/: kustomization.yaml
manifests/assist/ingestor/: kustomization.yaml
manifests/numaproj-assist/: isbsvc.yaml  kustomization.yaml
manifests/numaproj-assist/argocd-app/: argocd-demo-app-application.yaml
manifests/numaproj-assist/argocd-extn/: argocd-deployment-patch-numaproj-assist.yaml  argocd-extn-server-cm.yaml
manifests/numaproj-assist/ingestor/: log-ingestor-deployment-patch.yaml
manifests/numaproj-assist/redis/: redis.yaml
manifests/rollout/: error-rate-anomaly.yaml  error-rate.yaml  install.yaml  kustomization.yaml  latency-anomaly.yaml  log-config.yaml  metric-service.yaml  unified-anomaly.yaml
manifests/rollout-1/: install.yaml  kustomization.yaml  unified-anomaly.yaml
manifests/techcon/: error-rate-anomaly.yaml  error-rate.yaml  install.yaml  latency-anomaly.yaml  unified-anomaly.yaml
numaflow-dra/: .gitignore  CONTRIBUTING.md  Makefile  README.md  app.env.template  generate_pipeline_yaml.sh  pipeline.yaml  pyproject.toml  repo.env.template  system-config.env  user-config.env.template
numaflow-dra/config_yaml/: PVs.sh  PVs.yaml  dra-a100.yaml  dra-single-gpu.yaml  dra-t4.yaml  inter-step-buffer-service.yaml  isbsvc-dev.yaml  local-storage.yaml
numaflow-dra/dci_poc/: Makefile  pipeline1.yaml.template  pipeline2.yaml.template  pipeline3.yaml.template  pyproject.toml
numaflow-dra/dci_poc/vertex/: Dockerfile  Makefile  apt-packages.txt  entry.sh  filter_resize_stream.py  pyproject.toml  sink.py  source.py
numaflow-dra/dci_poc/vertex_gpu_yolov4/: Dockerfile  Makefile  entry.sh  inference_stream_yolov4.py  pyproject.toml
numaflow-dra/dci_poc/vertex_gpu_yolov7/: Dockerfile  Makefile  apt-packages.txt  entry.sh  inference_stream_yolov7.py  pyproject.toml
numaflow-dra/debug/: 2-even-odd-pipeline-for-dra.yaml  README.md  pipeline-debug.yaml.template  sample-single-gpu-01.yaml
numaflow-dra/demo/: 00-stat-demo.sh  01-forward-grafana.sh  02-start-x11vnc.sh  03-fix-resolution.sh  10-start-receiver.sh  11-start-mediamtx.sh  80-stop-mediamtx.sh  81-stop-receiver.sh  90-purge-logs.sh  README.md  grafana-dashboard.json
numaflow-dra/lib/: log.py  vertex_key_io.py
numaflow-dra/log/: log.py  logging_config.yaml
numaflow-dra/step1/: pipeline.yaml.template
numaflow-dra/step1-debug/: Dockerfile  Makefile  entry.sh  filter-resize-async.py  filter-resize-stream.py  filter-resize.py  pipeline-dev.yaml.template  pipeline.yaml.template  pyproject.toml  sink-debug.py  source.py
numaflow-dra/step1/vertex/: Dockerfile  Makefile  entry.sh  filter-resize-async.py  filter-resize-stream.py  filter-resize.py  pyproject.toml  sink-debug.py  sink-inf-debug.py  sink.py  source.py
numaflow-dra/step1/vertex-gpu/: Dockerfile  Makefile  entry.sh  inference-stream.py  pyproject.toml
numaflow-dra/tests/: __init__.py  testing_utils.py
numaflow-dra/tests/dci_poc/: conftest.py
numaflow-dra/tests/dci_poc/filter_resize_stream/: test_filter_resize_stream.py  utils.py
numaflow-dra/tests/dci_poc/inference_stream/: test_inference_stream.py  utils.py
numaflow-dra/tests/dci_poc/inference_stream_yolov4/: test_inference_stream.py  utils.py
numaflow-dra/tests/dci_poc/pipeline/: test_pipeline_pytest.py  test_pipeline_unittest.py
numaflow-dra/tests/dci_poc/sink/: test_sink.py  utils.py
numaflow-dra/tests/dci_poc/source/: conftest.py  test_source.py  utils.py
numaflow-dra/video-receive-server/: Makefile  pyproject.toml  video-receive-server.py
numaflow-dra/video-streaming-server/mediamtx/: mediamtx.yml.template
numaproj-assist/: README.md
numaproj-assist/manifests/numaproj-assist/: kustomization.yaml  namespace.yaml
ollama/: .gitignore  Dockerfile  Makefile  go.mod  go.sum  main.go  pipeline.yaml
python_uds_mqtt/: README.md  mqtt_udsource.py
python_uds_mqtt/manifests/: mosquitto-deployment.yaml  pipeline.yaml
python_uds_mqttt/: Dockerfile  isbsvc.yaml  mosquitto-deployment.yaml  mqtt_udsource.py  pipeline.yaml  requirements.txt
sentiment-analysis/: Dockerfile  Makefile  entry.sh  pipeline.yaml  pyproject.toml  udf.py
serving-demo/: Makefile  README.md
serving-demo/ascii/: Dockerfile  go.mod  go.sum  main.go
serving-demo/ascii/udfs/: animals.go  animals_test.go  ascii_art.go  ascii_art_test.go  planner.go  planner_test.go
serving-demo/manifests/: pipeline.yaml
serving-demo/servesink/: Cargo.toml  Dockerfile
serving-demo/servesink/src/: main.rs
summarization/: Dockerfile  README.md  log_summarization_pipeline.yaml  requirements.txt  starter.py
summarization/src/: __init__.py  factory.py
traffic-analyzer/: Dockerfile  Makefile  go.mod  go.sum  main.go
traffic-analyzer/input-generator/: Dockerfile  Makefile  README.md  example_payload.json  go.mod  go.sum  main.go
traffic-analyzer/manifests/: traffic-analyzer.yaml
traffic-analyzer/observability/: log.go
traffic-analyzer/udf/average/: average.go
ui/: app.js  fishConfig.js  index.html  main.css
(+9 files in other folders)
