[tool.poetry]
name = "sentiment-analysis"
version = "0.0.1"
description = ""
authors = ["Numaflow developers"]

[tool.poetry.dependencies]
python = "~3.10"
pynumaflow = "~0.5.0"
transformers = "~4.34"
torch = "1.12.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
