[tool.poetry]
name = "sentiment-analysis"
version = "0.0.1"
description = ""
authors = ["Numaflow developers"]

[tool.poetry.dependencies]
python = "~3.10"
pynumaflow = "~0.9.1"
requests = "2.32.3" 
transformers = "~4.52"
torch = "2.7.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
