[package]
name = "servesink"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tonic = "0.12.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
numaflow = {git = "https://github.com/numaproj/numaflow-rs", rev="v0.2.1"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["rustls-tls"]
